tests/negative/semantic/union_kind_readonly/input.ci
union Value {
    int i;
    string s;
}

void main() {
    Value v;
    v.kind = 1;
}
